--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
-Hello dear world.
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ryan woz ere</title>
+</head>
+<body>
+  <p>Hello dear world.
