--- a/public/index.html
+++ b/public/index.html
@@ -6,4 +6,4 @@
   <title>Ryan Roberts</title>
 </head>
 <body>
-  <p>Hello
+  <p>Hello, I'm over here → <a href="https://yep.digital">yep.digital</a>
