--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
-    <title>Ryan Roberts Freelance Web Designer &amp; Developer</title>
+    <title>Ryan Roberts, Freelance Web Designer &amp; Developer</title>
 
     <style>
       html, body {
