--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
     <div class="words">
       <h1>Hey, I'm <em>Ryan Roberts</em>.</h1>
-      <p>I design, build and host bespoke websites for small to medium size businesses from Kintore in Aberdeenshire.</p>
+      <p>I design, build and host bespoke websites for small to medium size businesses.</p>
       <p>Find out more at <a href="https://yep.digital">Yep Digital</a>, or catch me on <a href="https://www.linkedin.com/in/helloryanroberts/">Linkedin</a> and <a href="https://www.instagram.com/ryanroberts/">Instagram</a>.</p>
     </div>
 
