--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
   <body>
 
     <div class="words">
-      <h1>Hey, I'm <em>Ryan Roberts</em>.</h1>
-      <p>I design and host custom built websites for small to medium size businesses.</p>
-      <p>Find out more at <a href="https://yep.digital">Yep Digital</a>, or catch me on <a rel="me" href="https://mastodon.social/@ryanroberts">Mastodon</a> and <a href="https://www.instagram.com/ryanroberts/">Instagram</a>.</p>
+      <h1>Nope</h1>
     </div>
 
   </body>
